@@ -18,13 +18,14 @@
 
 package com.hw.langchain.agents.agent;
 
+import cn.hutool.core.map.MapBuilder;
+import com.google.common.collect.Lists;
 import com.hw.langchain.base.language.BaseLanguageModel;
 import com.hw.langchain.chains.llm.LLMChain;
 import com.hw.langchain.schema.AgentAction;
 import com.hw.langchain.schema.AgentFinish;
 import com.hw.langchain.schema.AgentResult;
 import com.hw.langchain.tools.base.BaseTool;
-
 import org.apache.commons.lang3.tuple.Pair;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -32,6 +33,7 @@ import org.slf4j.LoggerFactory;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * Class responsible for calling the language model and deciding the action.
@@ -59,7 +61,7 @@ public abstract class Agent extends BaseSingleActionAgent {
     }
 
     public List<String> stop() {
-        return List.of(
+        return Lists.newArrayList(
                 "\n" + observationPrefix().trim(),
                 "\n\t" + observationPrefix().trim());
     }
@@ -90,7 +92,7 @@ public abstract class Agent extends BaseSingleActionAgent {
     public List<String> inputKeys() {
         return llmChain.inputKeys().stream()
                 .filter(key -> !key.equals("agent_scratchpad"))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -105,7 +107,7 @@ public abstract class Agent extends BaseSingleActionAgent {
 
     @Override
     public AgentResult plan(List<Pair<AgentAction, String>> intermediateSteps, Map<String, Object> kwargs) {
-        var fullInputs = getFullInputs(intermediateSteps, kwargs);
+        Map<String, Object> fullInputs = getFullInputs(intermediateSteps, kwargs);
         String fullOutput = llmChain.predict(fullInputs);
 
         String prefix = fullOutput.startsWith("Action:") ? "" : "Thought:";
@@ -119,7 +121,9 @@ public abstract class Agent extends BaseSingleActionAgent {
     public Map<String, Object> getFullInputs(List<Pair<AgentAction, String>> intermediateSteps,
             Map<String, Object> kwargs) {
         Object thoughts = constructScratchpad(intermediateSteps);
-        var newInputs = Map.of("agent_scratchpad", thoughts, "stop", stop());
+        Map<String, Object> newInputs = MapBuilder.create(new HashMap<String, Object>())
+                .put("agent_scratchpad", thoughts)
+                .put( "stop", stop()).map();
         Map<String, Object> fullInputs = new HashMap<>(kwargs);
         fullInputs.putAll(newInputs);
         return fullInputs;
@@ -162,12 +166,12 @@ public abstract class Agent extends BaseSingleActionAgent {
 
             // We try to extract a final answer
             AgentResult agentResult = this.outputParser.parse(fullOutput);
-            if (agentResult instanceof AgentFinish agentFinish) {
+            if (agentResult instanceof AgentFinish) {
                 // If we can extract, we send the correct stuff
-                return agentFinish;
+                return (AgentFinish)agentResult;
             } else {
                 // If we can extract, but the tool is not the final tool, we just return the full output
-                return new AgentFinish(Map.of("output", fullOutput), fullOutput);
+                return new AgentFinish(MapBuilder.create(new HashMap<String, String>()).put("output", fullOutput).map(), fullOutput);
             }
         } else {
             throw new IllegalArgumentException(
